--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -1,1 +1,6 @@
+ENVIRONMENT=dev
+CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
+CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-clinicservicelambda
+APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
+APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-applicantservicelambda
 
