--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -146,4 +146,4 @@ jobs:
         working-directory: pets-core-services
 
       - name: Update API Gateway Stage
-        run: aws apigateway create-deployment --rest-api-id ${{ vars.API_GATEWAY_ID }} --stage-name ${{ inputs.environment }} # TODO: Likely to change to API
+        run: aws apigateway create-deployment --rest-api-id ${{ vars.API_GATEWAY_ID }} --stage-name ${{ env.API_GATEWAY_STAGE }}
