TBBETA-296: Uploading lambda zip to bucket

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -90,7 +90,10 @@ jobs:
         run: zip -r -j $ZIP_FILE $BUILD_FOLDER/*
         working-directory: pets-core-services
 
-      # TODO: Uploading to S3
+      - name: Upload Spec to S3 # TODO: Delete this step as part of TBBETA-647, Only here to ensure platforms deployment don't overwrite dev deployment
+        run: aws s3 cp $ZIP_FILE s3://${{ matrix.lambda.s3Bucket }} --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
+        working-directory: pets-core-services
+
       - name: Update lambda code
         run: aws lambda update-function-code --function-name ${{ matrix.lambda.lambdaName }} --zip-file fileb://$ZIP_FILE
         working-directory: pets-core-services
@@ -138,7 +141,7 @@ jobs:
           role-session-name: PETS-Core-Services-Deploy-Refreshed
 
       - name: Upload Spec to S3 # TODO: Delete this step as part of TBBETA-647, Only here to ensure platforms deployment don't overwrite dev deployment
-        run: aws s3 cp $SPEC_FILE s3://aw-pets-euw-dev-s3-clinicservicelambda --sse aws:kms --sse-kms-key-id ${{ secrets.SSE_KEY_SECRET }}
+        run: aws s3 cp $SPEC_FILE s3://${{ env.CLINIC_SERVICE_LAMBDA_BUCKET }} --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
         working-directory: pets-core-services
 
       - name: Deploy Spec to API Gateway
