--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -9,9 +9,6 @@ jobs:
   test-and-linting:
     name: Run unit tests, linting & security checks
     runs-on: ubuntu-latest
-    env:
-      CYPRESS_INSTALL_BINARY: 0
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,7 +21,6 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm i
-
       - name: Run unit tests
         run: pnpm run test --testTimeout=10000
         working-directory: pets-ui
@@ -45,9 +41,6 @@ jobs:
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
-    env:
-      CYPRESS_INSTALL_BINARY: 0
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -59,8 +52,17 @@ jobs:
           node-version: 18.x
           cache: "pnpm"
 
-      - name: Install dependencies
-        run: pnpm i
+      - name: Cache Cypress binary
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-binary-${{ runner.os }}-${{ hashFiles('pets-ui/package.json') }}
+          restore-keys: |
+            cypress-binary-${{ runner.os }}-
+
+      - name: Install Cypress Binary when missing
+        working-directory: pets-ui
+        run: pnpm i cypress
 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
