TBBETA-571: Cancel jobs in progress

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -5,6 +5,10 @@ on:
     paths: "pets-ui/**"
   workflow_dispatch:
 
+concurrency:
+  group: ci-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   test-and-linting:
     name: Run unit tests, linting & security checks
