--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -57,16 +57,19 @@ jobs:
           cache: "pnpm"
 
       - name: Cache Cypress binary
+        id: cache-cypress-binary
         uses: actions/cache@v4
         with:
           path: ~/.cache/Cypress
           key: cypress-binary-${{ runner.os }}-${{ hashFiles('pets-ui/package.json') }}
-          restore-keys: |
-            cypress-binary-${{ runner.os }}-
+
 
       - name: Install Cypress Binary when missing
+        if: steps.cache-cypress-binary.outputs.cache-hit != 'true'
+        run: |
+          pnpm exec cypress install --force
+          pnpm exec cypress verify
         working-directory: pets-ui
-        run: pnpm i cypress
 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
