TBBETA-296: Add Linting changes

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -25,13 +25,16 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm i
+
+      - name: Lint typescript code
+        run: pnpm lint
+        working-directory: pets-ui
+        continue-on-error: true # TODO: Understand Why and Take it out
+
       - name: Run unit tests
         run: pnpm run test --testTimeout=10000
         working-directory: pets-ui
-      - name: Run eslint
-        run: pnpm run lint
-        working-directory: pets-ui
-        continue-on-error: true
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4.1.0
         env:
