--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -90,7 +90,7 @@ jobs:
         run: zip -r -j $ZIP_FILE $BUILD_FOLDER/*
         working-directory: pets-core-services
 
-      - name: Upload Spec to S3 # TODO: Delete this step as part of TBBETA-647, Only here to ensure platforms deployment don't overwrite dev deployment
+      - name: Upload Spec to S3 # Ensures Platforms deployement always deploy the latest changes in this repo.
         run: aws s3 cp $ZIP_FILE s3://${{ matrix.lambda.s3Bucket }} --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
         working-directory: pets-core-services
 
@@ -139,10 +139,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CORE_SERVICES_ROLE_NAME }}"
           role-session-name: PETS-Core-Services-Deploy-Refreshed
-
-      - name: Upload Spec to S3 # TODO: Delete this step as part of TBBETA-647, Only here to ensure platforms deployment don't overwrite dev deployment
-        run: aws s3 cp $SPEC_FILE s3://${{ env.CLINIC_SERVICE_LAMBDA_BUCKET }} --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
-        working-directory: pets-core-services
 
       - name: Deploy Spec to API Gateway
         run: aws apigateway put-rest-api --rest-api-id ${{ vars.API_GATEWAY_ID }} --mode overwrite --body fileb://$SPEC_FILE
