TBBETA-296: Resolving linting issues

--- a/pets-ui/cypress/tsconfig.json
+++ b/pets-ui/cypress/tsconfig.json
@@ -6,5 +6,8 @@
       "types": ["cypress", "node"],
       "composite": true
     },
-    "include": ["**/*.ts"]
+    "include": [
+      "**/*.ts",
+      "../src/utils/countryList.ts"
+    ]
   }
