--- a/pets-ui/cypress/tsconfig.json
+++ b/pets-ui/cypress/tsconfig.json
@@ -1,10 +1,16 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-      "target": "es5",
+      "target": "es2022",
       "lib": ["es5", "dom"],
       "types": ["cypress", "node"],
-      "composite": true
+      "composite": true,
+      "alwaysStrict": true,
+      "isolatedModules": true,
+      "noImplicitAny": true,
+      "noImplicitThis": true,
+      "module": "NodeNext",
+      "moduleResolution": "nodenext"
     },
     "include": [
       "**/*.ts",
