TBBETA-296: Added linting pre-push check

--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "build-lambda": "esbuild --bundle '--external:@aws-sdk/*' --platform=node --target=node18 --format=cjs",
-    "build-watch": ""
+    "build-watch": "",
+    "lint": "eslint ."
   }
 }
