--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "security-checks": "git secrets --scan",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docker:start": "docker compose up -d --wait"
   },
   "main": "index.js",
   "repository": "git@github.com:UKHSA-Internal/pre-entry-tb-screening-app.git",
@@ -18,6 +19,7 @@
     "@types/node": "^22.10.10",
     "@vitest/coverage-v8": "2.1.8",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
@@ -26,6 +28,7 @@
     "globals": "^15.11.0",
     "husky": "^9.1.7",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.13.0",
     "vitest": "^2.1.5"
