--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,4 @@ packages:
   # include packages in subfolders (e.g. apps/ and packages/)
   - "pets-ui/**"
   - 'pets-core-services/**'
+  - 'pets-local-infra/**'
