TBBETA-296: DRY changes

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -127,7 +127,7 @@ jobs:
         run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
 
       - name: Generate Swagger spec
-        run: pnpm tsx src/swagger-generator/index.ts
+        run: pnpm generate:swagger-doc
         working-directory: pets-core-services
 
       - name: Configure AWS credentials
