--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -22,6 +22,7 @@
     "vitest": "^2.1.5"
   },
   "scripts": {
+    "generate:swagger-doc": "pnpm tsx src/swagger-generator/index.ts",
     "build-lambda": "esbuild --bundle '--external:@aws-sdk/*' --platform=node --target=node18 --format=cjs",
     "build-watch": "",
     "lint": "eslint ."
