--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -25,9 +25,7 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm i
-      - name: Build application
-        run: pnpm run build
-        working-directory: pets-ui
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -36,11 +34,26 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_UI_ROLE_NAME }}"
           role-session-name: PETS-UI-Deploy
+
+      - name: Get API Gateway Spec
+        run: |
+          aws apigateway get-export \
+            --rest-api-id ${{ vars.API_GATEWAY_ID }} \
+            --stage-name ${{ env.API_GATEWAY_STAGE }} \
+            --export-type oas30 \
+            --region eu-west-2 \
+            --output-file ./pets-core-services/openapi-docs.json
+
+      - name: Build application
+        run: pnpm run build
+        working-directory: pets-ui
+
       - name: Get secrets from AWS
         uses: aws-actions/aws-secretsmanager-get-secrets@v2
         with:
           secret-ids: AppDeploy
           parse-json-secrets: true
+
       - name: Upload App to S3
         working-directory: pets-ui/dist
         run: aws s3 sync . s3://$APPDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $APPDEPLOY_SSE_KEY
