--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/swagger-ui-react": "^5.18.0",
     "govuk-frontend": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "swagger-ui-react": "^5.18.3"
   },
   "devDependencies": {
     "@redux-devtools/core": "^4.0.0",
