--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -102,7 +102,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: failed-tests-screenshots
-          path: pets-ui/cypress/screenshots
+          path: pets-ui/cypress/cypress/screenshots
 
 
   build:
@@ -121,6 +121,12 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm i
+
+      - name: Create a placeholder Swagger Docs file
+        run: |
+          echo '{"comment": "placeholder to be replaced at core-services build"}' > openapi-docs.json
+        working-directory: pets-core-services
+
       - name: Create UI build
         run: pnpm run build
         working-directory: pets-ui
