TBBETA-296: Resolving invalid urls and other improvs

--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -79,10 +79,10 @@ jobs:
             issue_number: ${{ env.PR_NUMBER }},
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: `🚀 Environment Deployed for ${{ env.ENVIRONMENT }}
+            body: `🚀 Pull Request ${{ env.PR_NUMBER }} deployed to ${{ env.ENVIRONMENT }} 
 
-              - React app: https://${{ steps.get_deployment_url.outputs.url }}
-              - API Docs: https://${{ steps.get_deployment_url.outputs.url }}/api-docs
+              - React app: ${{ vars.APP_DOMAIN }}
+              - API Docs: ${{ vars.APP_DOMAIN }}/api-docs
             `
             })
         env:
