--- a/configs/.env.test
+++ b/configs/.env.test
@@ -1,1 +1,6 @@
 ENVIRONMENT=test
+CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
+CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-clinicservicelambda
+APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
+APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-applicantservicelambda
+API_GATEWAY_STAGE=api
