--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
   "repository": "git@github.com:UKHSA-Internal/pre-entry-tb-screening-app.git",
   "author": "PETS Engineering",
   "license": "MIT",
-  "dependencies": {
-    "prettier": "^3.3.3"
+  "devDependencies": {
+    "@eslint/compat": "^1.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.14.0",
+    "@types/node": "^22.10.10",
+    "@vitest/coverage-v8": "2.1.8",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.11.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.3.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.13.0",
+    "vitest": "^2.1.5"
   },
   "packageManager": "pnpm@9.15.4",
   "os": [
