--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,5 +4,6 @@ packages:
   - 'core-services/applicant-service/**'
   - 'core-services/clinic-service/**'
   - 'core-services/lambda-authoriser/**'
+  - 'pets-core-services/**'
   # if required, exclude some directories
   - '!**/app/pets-ui/**'
