Feature/tbbeta 296 local dev (#315)
* TBBETA-296: Added root eslint to lint all packages, also started central package for all core services

* TBBETA=296: Centralised printwidth for all

* TBBETA-296: Created intermdediate package folder for new backend structure

* TBBETA-296: Centralised node_modules commenting out

* TBBETA-296: Resolve linting errors with UI and cypress

* TBBETA-296: Delete redundant config

* TBBETA-296: Added linting for cypress and UI

* TBBETA-296: Added needed central dependencies

* TBBETA-296: Moved common packages to root package.json

* TBBETA-296: Sonar cloud initial config

* TBBETA-296: Moved cypress configs to own directory

* TBBETA-296: Added tsconfig for cypress

* TBBETA-296: Tightened up console errors

* TBBETA-296: Added X-ray for tracing

* TBBETA-296: Renamed core-services to a more permanent location

* TBBETA-296: Creating API docs for hello world lambdas

* TBBETA-296: Removing redundant packages

* TBBETA-296: Automate param from path
TBBETA-296: Added lambda extension to api gateway
TBBETA-296: Added hello world lambda for creating clinics

* TBBETA-296: Created lambda for the applicant service and registered its endpoint
TBBETA-296: Group Endpoints based on service
TBBETA-296: Added documentation for headers

* TBBETA-296: Updated deployment pipeline to use esbuild to build and deploying zip files directly

* TBBETA-296: Pipeline fix

* TBBETA-296: Fixing broken pipeline

* TBBETA-296: Resolving broken pipeline

* TBBETA-296: Removing spurious error with vsocde

* TBBETA-296: Creating folder correctly

* TBBETA-296: Fixing wrong path names

* TBBETA-296: Skipping out config management

* TBBETA-296: Resolving build problem

* TBBETA-296: Use correct var name

* TBBETA-296: Accounting for pnpm poor handling of cli arguments

* TBBETA-296: Resolving wrong names

* TBBETA-296: Resolving another fix

* TBBETA-296: Fixing spotted issues in zip and lambda

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -30,6 +30,11 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
+      - name: Create a placeholder Swagger Docs file
+        run: |
+          echo '{"comment": "placeholder to be replaced at core-services build"}' > openapi-docs.json
+        working-directory: pets-core-services
+
       - name: Lint typescript code
         run: pnpm lint
         working-directory: pets-ui
@@ -39,7 +44,7 @@ jobs:
         working-directory: pets-ui
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v4.1.0
+        uses: SonarSource/sonarqube-scan-action@v4.2.1
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
@@ -78,6 +83,11 @@ jobs:
           pnpm exec cypress verify
         working-directory: pets-ui
 
+      - name: Create a placeholder Swagger Docs file
+        run: |
+          echo '{"comment": "placeholder to be replaced at core-services build"}' > openapi-docs.json
+        working-directory: pets-core-services
+
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         with:
@@ -92,7 +102,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: failed-tests-screenshots
-          path: pets-ui/cypress/screenshots
+          path: pets-ui/cypress/cypress/screenshots
 
 
   build:
@@ -111,6 +121,12 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm i
+
+      - name: Create a placeholder Swagger Docs file
+        run: |
+          echo '{"comment": "placeholder to be replaced at core-services build"}' > openapi-docs.json
+        working-directory: pets-core-services
+
       - name: Create UI build
         run: pnpm run build
         working-directory: pets-ui
