--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -23,11 +23,13 @@ jobs:
         with:
           node-version: 18.x
           cache: "pnpm"
+
+      - name: Load environment config
+        run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
+
       - name: Install dependencies
         run: pnpm i
-      - name: Build application
-        run: pnpm run build
-        working-directory: pets-ui
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -36,11 +38,52 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_UI_ROLE_NAME }}"
           role-session-name: PETS-UI-Deploy
+
+      - name: Get API Gateway Spec
+        run: |
+          aws apigateway get-export \
+            --rest-api-id ${{ vars.API_GATEWAY_ID }} \
+            --stage-name ${{ env.API_GATEWAY_STAGE }} \
+            --export-type oas30 \
+            --region eu-west-2 \
+            ./pets-core-services/openapi-docs.json
+
+      - name: Build application
+        run: pnpm run build
+        working-directory: pets-ui
+
       - name: Get secrets from AWS
         uses: aws-actions/aws-secretsmanager-get-secrets@v2
         with:
           secret-ids: AppDeploy
           parse-json-secrets: true
+
       - name: Upload App to S3
         working-directory: pets-ui/dist
         run: aws s3 sync . s3://$APPDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $APPDEPLOY_SSE_KEY
+
+      - name: Get Pull Request Number
+        id: get_pr
+        run: |
+          PR_NUMBER=$(gh pr list --head ${{ github.ref_name }} --state open --json number --jq '.[0].number')
+          echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deployment details
+        uses: actions/github-script@v7
+        if: env.PR_NUMBER != ''
+        with:
+          script: |
+            github.rest.issues.createComment({
+            issue_number: ${{ env.PR_NUMBER }},
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: `🚀 Pull Request ${{ env.PR_NUMBER }} deployed to ${{ env.ENVIRONMENT }} 
+
+              - React app: ${{ vars.APP_DOMAIN }}
+              - API Docs: ${{ vars.APP_DOMAIN }}/api-docs
+            `
+            })
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
