--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -83,7 +83,7 @@ jobs:
         run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
 
       - name: Build lambda source code
-        run: pnpm build-lambda ${{ matrix.lambda.path }} --outfile=$BUILD_FOLDER/index.js
+        run: node esbuild.config.js ${{ matrix.lambda.path }} $BUILD_FOLDER/index.js
         working-directory: pets-core-services
 
       - name: Create zip
@@ -127,7 +127,7 @@ jobs:
         run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
 
       - name: Generate Swagger spec
-        run: pnpm tsx src/swagger-generator/index.ts
+        run: pnpm generate:swagger-doc
         working-directory: pets-core-services
 
       - name: Configure AWS credentials
