--- a/pets-ui/sonar-project.properties
+++ b/pets-ui/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app-ui
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
-sonar.exclusions=src/components/**/*.test.tsx, src/utils/*, src/redux/*
+sonar.exclusions=src/components/**/*.test.tsx, src/utils/*, src/redux/*, src/pages/*.test.tsx
 sonar.tests=src/components/, cypress
 sonar.test.inclusions=src/components/**/*.test.tsx, cypress/e2e/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
