--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -22,3 +22,5 @@ jobs:
         with:
           configurationFile: ./.github/renovate-global-config.json
           token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          LOG_LEVEL: "debug"
