--- a/.github/renovate-global-config.json
+++ b/.github/renovate-global-config.json
@@ -1,23 +1,16 @@
 {
-    "username": "renovate-release",
-    "gitAuthor": "Renovate Bot <renovatebot@renovateapp.com>",
-    "onboarding": true,
-    "platform": "github",
-    "includeForks": true,
-    "autodiscover": true,
-    "packageRules": [
-      {
-        "description": "lockFileMaintenance",
-        "matchUpdateTypes": [
-          "pin",
-          "digest",
-          "patch",
-          "minor",
-          "major",
-          "lockFileMaintenance"
-        ],
-        "dependencyDashboardApproval": false,
-        "stabilityDays": 0
-      }
-    ]
-  }
+  "username": "renovate-release",
+  "gitAuthor": "Renovate Bot <renovatebot@renovateapp.com>",
+  "onboarding": true,
+  "platform": "github",
+  "forkProcessing": "enabled",
+  "autodiscover": true,
+  "packageRules": [
+    {
+      "description": "lockFileMaintenance",
+      "matchUpdateTypes": ["pin", "digest", "patch", "minor", "major", "lockFileMaintenance"],
+      "dependencyDashboardApproval": false,
+      "minimumReleaseAge": null
+    }
+  ]
+}
