--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,7 +1,9 @@
 name: Renovate
+
 on:
-  schedule:
-    - cron: "0 0 * * 1-5"
+  pull_request:
+    branches:
+    - main
 
 permissions:
   checks: write
@@ -22,3 +24,5 @@ jobs:
         with:
           configurationFile: ./.github/renovate-global-config.json
           token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          LOG_LEVEL: "debug"
