--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Lint typescript code
         run: pnpm -r lint
 
-  ui-tests-and-sonar-scan:
+  ui-tests:
     name: Run unit tests, security checks for ui
     runs-on: ubuntu-latest
     steps:
@@ -59,12 +59,11 @@ jobs:
         run: pnpm run test --testTimeout=10000
         working-directory: pets-ui
 
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarqube-scan-action@v4.1.0
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   with:
-      #     projectBaseDir: pets-ui/
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-ui
+          path: pets-ui/coverage/
 
   cypress-run:
     name: Run cypress tests
@@ -115,7 +114,7 @@ jobs:
           name: failed-tests-screenshots
           path: pets-ui/cypress/cypress/screenshots
 
-  core-services-test-and-sonar-scan:
+  core-services-tests:
     name: Run unit tests security checks for core services
     runs-on: ubuntu-latest
     steps:
@@ -158,12 +157,44 @@ jobs:
           name: docker-compose-logs
           path: logs/docker-compose.log
 
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarqube-scan-action@v4.2.1
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   with:
-      #     projectBaseDir: pets-core-services
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-core-services
+          path: pets-core-services/coverage/
+
+
+  sonar-scan:
+    runs-on: ubuntu-latest
+    needs: [ui-tests, core-services-test]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download UI coverage reports
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-ui
+          path: pets-ui/coverage/
+
+      - name: Download Core Services coverage reports
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-core-services
+          path: pets-core-services/coverage/
+
+      - name: Merge coverage reports
+        run: |
+          pnpm nyc merge pets-ui/coverage/ pets-core-services/coverage/ merged-output/merged-coverage.json
+
+      - name: Run SonarQube scan
+        uses: SonarSource/sonarqube-scan-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: "https://sonarcloud.io"
+        with:
+          args: >
+            -Dsonar.javascript.lcov.reportPaths=coverage-final/coverage.json
 
   build:
     name: Create UI build
