--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.11.0",
     "husky": "^9.1.7",
+    "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "5.5.4",
