--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,9 +1,8 @@
 name: Renovate
 
 on:
-  pull_request:
-    branches:
-    - main
+  schedule:
+    - cron: "0 0 * * 1-5"
 
 permissions:
   checks: write
