--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -6,5 +6,5 @@ AWS_ACCESS_KEY_ID=AccessKeyId
 AWS_SECRET_ACCESS_KEY=SecretAccessKey
 AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
-LOG_LEVEL=error # fatal | error | debug | info
+LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
