--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "typescript": "5.5.4",
+    "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
     "vitest": "^2.1.9"
   },
