TBBETA-622: Sonar cloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
 sonar.sources=pets-ui/src, pets-core-services/src
-# sonar.exclusions=src/components/**/*.test.tsx, src/utils/*, src/redux/*, src/pages/*.test.tsx
-# sonar.tests=src/components/, cypress
-# sonar.test.inclusions=src/components/**/*.test.tsx, cypress/e2e/**
+sonar.exclusions=pets-ui/src/utils/*, pets-ui/src/redux/*, pets-ui/**/*.test.tsx
+sonar.tests=pets-ui/src, pets-core-services/src
+sonar.test.inclusions=**/*.test.ts, **/*.test.tsx, cypress/e2e/**, **/*.spec.ts
 sonar.javascript.lcov.reportPaths=merged-output/merged-coverage.json
